@@ -20,6 +20,11 @@
                 <onclick>ActivateWindow(osdaudiosettings)</onclick>
             </item>
             <item>
+                <icon />
+                <label>$LOCALIZE[31400]</label>
+                <onclick>ActivateWindow(osdsubtitlesettings)</onclick>
+            </item>
+            <item>
                 <icon/>
                 <label>297</label>
                 <onclick>audiodelay</onclick>
@@ -28,13 +33,6 @@
                 <icon/>
                 <label>22006</label>
                 <onclick>subtitledelay</onclick>
-            </item>
-            <item>
-                <icon />
-                <label>$LOCALIZE[287] $LOCALIZE[33003]</label>
-                <onclick>Close</onclick>
-                <onclick>Close</onclick>
-                <onclick>ActivateWindow(SubtitleSearch)</onclick>
             </item>
             
         </content>
