@@ -3,6 +3,8 @@ DIALOGVIDEOINFO - Fix for trailer button (hopefully)
 DIALOGSELECT - Fix for weird multilines
 PVR - Hopefully fix artwork and info overlap issues
 LEIA - Return of Alphabet Strip
+LEIA - Minimalist subtitles button by default (option to toggle in SkinSettings)
+LEIA - Add subtitles settings button in osd settings cog menu.
 
 [B]0.9.27[/B]
 SKINSHORTCUTS Fix enable / disable code when in skinshortcuts and adding item
